Change some links and details

--- a/en/Intro_to_Python.ipynb
+++ b/en/Intro_to_Python.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Untitled0"
+  "name": "Introduction to programming with Python"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -29,16 +29,16 @@
      "source": [
       "Objectives :\n",
       "\n",
-      "to code in the interpretor and explore the basics of the language to write a script that we'll run in the interpretor\n",
+      "to code in the interpreter and explore the basics of the language to write a script that we'll run in the interpreter\n",
       "\n",
       "Documentation\n",
-      "* http://www.python.org/doc/\n",
-      "* http://docs.python.org/tutorial/\n",
-      "* http://docs.python.org/library/\n",
+      "* http://docs.python.org/2/using/\n",
+      "* http://docs.python.org/2/tutorial/\n",
+      "* http://docs.python.org/2/library/\n",
       "\n",
       "Environment\n",
       "* text editor\n",
-      "* python interpretor : python, ipython"
+      "* Python interpreter: base Python or enhanced IPython"
      ]
     },
     {
